# AtrhurSchwarz

./: .gitignore  frontend.py  main.py  pyproject.toml
app_ui/: index.html  popup.js  style.css
data/: data.csv  keys.json  old_keys.json
examples/schwarz/: result_example.json  schwarz_data_example.csv
get_keys/: get_keys.py  index.html
results/: incorrect_result_example.json  result_12_07_2022_00_58_35.json
src/: backend.py  data_reader.py  main.py
src/frontend/: index.html
src/frontend/css/: style.css
src/frontend/scripts/: backend.js  popup.js  window_size.js
tests/: test_atrhurschwarz.py
