[tool.poetry]
name = "AtrhurSchwarz"
version = "0.1.0"
description = ""
authors = ["stasfr <stas240600@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
